static/css/styles.css
/*Notifications*/
.notification {
  text-align: center;
  padding: 15px 30px;
  border-radius: 4px;
  width: 30%;
  margin: auto;
}
.success {
  background: #DCEDC8;
  color: #33691E;
  margin-bottom: 20px;
}

.error {
  background: #FFCCBC;
  color: #b71c1c;
  margin-bottom: 20px;
}

.idea {
  border: 2px solid transparent;
  opacity: 0.8;
  transition: 0.5s;
}

.idea:hover{
  border: 2px solid black;
  opacity: 1;
}

.navbar-brand{
  transition: 0.5s;
  width: 200px !important;
}

.sitename:hover a.navbar-brand span{
  display: none;
  transition: 0.5s;
}
.sitename:hover a.navbar-brand:after{
  content: "Home";
  color: #2980ef !important;
}

.boardname{
  font-weight: bold;
  font-size: 12pt;
  color: #2980ef;

  padding: 15px 15px;
}

.delete-button{
  transition: 0.5s;
}

.delete-button:hover{
  color: red;
}

textarea#content{
  height: 700px;
}

button.hover {
  opacity: 0.6;
  padding-left: 10px;
  padding-right: 10px;

  left: 0;
}

button.hover:hover{
  opacity: 1;
  transition: 0.5s;
}

.valid {
  color: green;
}

.invalid {
  color: #9a2617;
}

@media (min-width: 1800px){
  .ideatable{
    width: 1700px !important;
  }
}

.bottomright {
  position: fixed;
  bottom: -4px;
  right:-4px;
  width: 10%;
  height: 5%;
}

#addtotag {
  height: 100%;
}

.rotated-sidebar {
    flex-direction: row-reverse;
    justify-content: center;
    align-content: center;
    width: 100vw;
    position: fixed!important;
    transition: 0.5s;
    transition-timing-function: ease-out;
    background: rgb(255,255,255);
    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 60%, rgba(255,255,255,0) 100%);
}

@media (min-height: 1050px) {
  .rotated-sidebar {
    justify-content: flex-end;
    align-content: flex-start;
    transform: rotate(-90deg) translate(0, 150px);
    transform-origin: right bottom;
    left: -950px;
    width: 900px;
    height: 150px;
    top: -10px;
    position: fixed!important;
    transition: 0.5s;
    margin: 0;
  }
}

@media (min-height: 1200px) {
  .rotated-sidebar {
    justify-content: flex-end;
    align-content: flex-start;
    transform: rotate(-90deg) translate(0, 150px);
    transform-origin: right bottom;
    left: -1040px;
    width: 1050px;
    height: 150px;
    top: -10px;
    position: fixed!important;
    transition: 0.5s;
    padding-top: 0!important;
    margin: 0;
  }
}

.ideacontainor{
  padding-top: 40px;
  transition: 0.5s;
}

.ideatable::after {
  content: "";
  flex: auto;
}

@media (min-height: 1050px) {
  .ideacontainor{
    padding-left: 100px;
    padding-top: 0!important;
  }
}

@media (max-width: 990px) {
  .rotated-sidebar{
    padding-top: 60px!important;
  }
}

.icon-edit-hover:hover{
  fill: #2980ef;
  transition: 0.5s;
}

.icon-delete-hover:hover{
  fill: red;
  transition: 0.5s;
}

.board-buttons{
  transition: 1s;
}

@media (max-width: 1500px){
  .board-buttons{
    max-width: 105px;
  }
}

